--- a/index.html
+++ b/index.html
@@ -536,102 +536,102 @@
                 main_title_part1: "Your Future Unlocked:",
                 main_title_part2: "Navigating Post-16 Pathways",
                 intro_text: "Helping your child decide their path after Year 11 can be a big step. This guide explains the main options and how you can support their choices.",
-                al_title: "A-levels",
-                al_description: "Academic subjects, ideal for university routes.",
-                al_key_info_header: "Key Info & Realities:",
-                al_what_label: "What:",
-                al_what_text: "2-year academic deep dive into 3-4 subjects.",
+                al_title: "A-Levels",
+                al_description: "Traditional academic qualifications, highly valued for university entry.",
+                al_key_info_header: "Key Info & Reality Check:",
+                al_what_label: "What it is:",
+                al_what_text: "A 2-year course studying 3-4 subjects you choose in depth. Focus is on academic theory and knowledge.",
                 al_entry_label: "Entry:",
-                al_entry_text: "5+ GCSEs @ 4/C (or higher in chosen subjects).",
+                al_entry_text: "Typically 5 or more GCSEs at grades 9-4 (A*-C), often with higher grade requirements (e.g., 6/B) in the chosen subjects.",
                 al_assessment_label: "Assessment:",
-                al_assessment_text: "Mostly <strong>final exams</strong> (some coursework).",
+                al_assessment_text: "Mainly by <strong>final exams</strong> at the end of the 2 years, with some subjects having a coursework component.",
                 al_progression_label: "Progression:",
-                al_progression_text: "Primary route to <strong>university</strong>, also Higher/Degree Apprenticeships.",
-                al_stereotype_label: "Stereotype:",
-                al_stereotype_text: "\"Only for uni\" / \"too academic\".",
-                al_reality_label: "Reality:",
-                al_reality_text: "Develops analytical skills, opens many doors. Not the *only* uni path.",
-                al_reflection_prompt: "Could my child enjoy in-depth study of specific subjects?",
+                al_progression_text: "The primary route to <strong>university</strong>. Also respected for Higher/Degree Apprenticeships and direct employment.",
+                al_stereotype_label: "The Stereotype:",
+                al_stereotype_text: "\"They're the only 'proper' qualification\" / \"They're only for getting into university.\"",
+                al_reality_label: "The Reality:",
+                al_reality_text: "They build deep subject knowledge and strong analytical skills. While they are a key university route, many other pathways also lead to higher education and successful careers.",
+                al_reflection_prompt: "Does my child enjoy academic learning and exploring subjects in detail?",
                 btec_title: "BTECs",
-                btec_description: "Practical and coursework-based, focusing on vocational skills.",
-                btec_key_info_header: "Key Info & Realities:",
-                btec_what_label: "What:",
-                btec_what_text: "Applied learning in specific sectors (e.g., Health, Business, IT).",
+                btec_description: "Vocational qualifications that are practical, hands-on, and related to specific job sectors.",
+                btec_key_info_header: "Key Info & Reality Check:",
+                btec_what_label: "What it is:",
+                btec_what_text: "Applied, practical learning in a specific sector like Health, Business, or IT, often with real-world case studies.",
                 btec_entry_label: "Entry:",
-                btec_entry_text: "Varies, typically 4-5 GCSEs @ 4/C.",
+                btec_entry_text: "Varies by course and level, but typically 4-5 GCSEs at grades 9-4 (A*-C).",
                 btec_assessment_label: "Assessment:",
-                btec_assessment_text: "Mostly <strong>coursework</strong>, projects, and practicals.",
+                btec_assessment_text: "Primarily through <strong>coursework</strong>, projects, and practical assignments. Fewer final exams than A-Levels.",
                 btec_progression_label: "Progression:",
-                btec_progression_text: "University (accepted by 95%), apprenticeships, or work.",
-                btec_stereotype_label: "Stereotype:",
-                btec_stereotype_text: "\"Easier\" / \"not as good as A-levels\".",
-                btec_reality_label: "Reality:",
-                btec_reality_text: "Develops practical skills valued by employers and unis.",
-                btec_reflection_prompt: "Does my child prefer project work over exams?",
+                btec_progression_text: "Excellent route to university (accepted by 95%), apprenticeships, or directly into employment.",
+                btec_stereotype_label: "The Stereotype:",
+                btec_stereotype_text: "\"They're an easier option\" / \"Not as respected as A-Levels.\"",
+                btec_reality_label: "The Reality:",
+                btec_reality_text: "They are rigorous qualifications that develop practical, real-world skills highly valued by both employers and universities.",
+                btec_reflection_prompt: "Does my child thrive with project-based work and prefer fewer exams?",
                 tl_title: "T-Levels",
-                tl_description: "A mix of classroom learning and a long industry placement.",
-                tl_key_info_header: "Key Info & Realities:",
-                tl_what_label: "What:",
-                tl_what_text: "80% college, 20% (45+ days) on-the-job placement.",
+                tl_description: "A 2-year technical qualification combining classroom theory with a long industry placement.",
+                tl_key_info_header: "Key Info & Reality Check:",
+                tl_what_label: "What it is:",
+                tl_what_text: "A blend of 80% classroom learning and 20% on-the-job experience, including a 45-day (minimum) industry placement.",
                 tl_entry_label: "Entry:",
-                tl_entry_text: "Varies, often requires English/Maths GCSEs at 4.",
+                tl_entry_text: "Varies, but generally requires 5 GCSEs including English and Maths at grade 4 or above.",
                 tl_assessment_label: "Assessment:",
-                tl_assessment_text: "Exams, projects, and employer review.",
+                tl_assessment_text: "A mix of exams, practical projects, and a review from the placement employer.",
                 tl_progression_label: "Progression:",
-                tl_progression_text: "Skilled work, Higher Apprenticeships, or university.",
-                tl_stereotype_label: "Stereotype:",
-                tl_stereotype_text: "\"Just for work\" / \"unproven\".",
-                tl_reality_label: "Reality:",
-                tl_reality_text: "Equivalent to 3 A-levels, gives real work experience.",
-                tl_reflection_prompt: "Would a blend of classroom and real work suit my child?",
+                tl_progression_text: "Leads to skilled employment, Higher Apprenticeships, or university (UCAS points are awarded).",
+                tl_stereotype_label: "The Stereotype:",
+                tl_stereotype_text: "\"They're just for trades\" / \"They're too new and unproven.\"",
+                tl_reality_label: "The Reality:",
+                tl_reality_text: "Equivalent to 3 A-Levels, they provide valuable, real-world experience and are co-designed with leading employers.",
+                tl_reflection_prompt: "Would my child benefit from mixing academic study with significant, real-world work experience?",
                 ib_title: "IB Diploma",
-                ib_description: "A broad, international curriculum with six subjects.",
-                ib_key_info_header: "Key Info & Realities:",
-                ib_what_label: "What:",
-                ib_what_text: "6 subjects across different areas, plus a core program.",
+                ib_description: "A broad and challenging international curriculum covering six different subject areas.",
+                ib_key_info_header: "Key Info & Reality Check:",
+                ib_what_label: "What it is:",
+                ib_what_text: "A comprehensive 2-year programme studying 6 subjects (from languages to sciences), plus a core programme focusing on critical thinking and research.",
                 ib_entry_label: "Entry:",
-                ib_entry_text: "High requirements, often 5+ GCSEs at 6/B or above.",
+                ib_entry_text: "Demanding entry requirements, typically needing at least 5 GCSEs at grade 7-9 (A-A*).",
                 ib_assessment_label: "Assessment:",
-                ib_assessment_text: "Exams and extensive coursework.",
+                ib_assessment_text: "A combination of final exams and extensive coursework, including a major independent research project (the Extended Essay).",
                 ib_progression_label: "Progression:",
-                ib_progression_text: "Excellent for top UK and international universities.",
-                ib_stereotype_label: "Stereotype:",
-                ib_stereotype_text: "\"Only for geniuses\" / \"too much work\".",
-                ib_reality_label: "Reality:",
-                ib_reality_text: "Challenging but develops excellent time management and breadth of knowledge.",
-                ib_reflection_prompt: "Is my child an all-rounder who enjoys a challenge?",
+                ib_progression_text: "An excellent qualification for applying to top UK and international universities.",
+                ib_stereotype_label: "The Stereotype:",
+                ib_stereotype_text: "\"It's only for geniuses\" / \"The workload is impossible.\"",
+                ib_reality_label: "The Reality:",
+                ib_reality_text: "It is academically challenging but develops exceptional time management, research skills, and a global perspective.",
+                ib_reflection_prompt: "Is my child a strong all-rounder who is self-motivated and enjoys a rigorous academic challenge?",
                 app_title: "Apprenticeships",
-                app_description: "Earn while you learn in a real job with training.",
-                app_key_info_header: "Key Info & Realities:",
-                app_what_label: "What:",
-                app_what_text: "A real job with structured training (20% off-the-job).",
+                app_description: "A real job with hands-on experience, a salary, and the chance to train and gain qualifications.",
+                app_key_info_header: "Key Info & Reality Check:",
+                app_what_label: "What it is:",
+                app_what_text: "A full-time job with structured training. At least 20% of the time is spent in 'off-the-job' training with a college or training provider.",
                 app_entry_label: "Entry:",
-                app_entry_text: "Varies by level; some have no formal requirements.",
+                app_entry_text: "Varies hugely by level (Intermediate, Advanced, Higher, Degree). Some have no formal requirements, others require A-Levels or equivalent.",
                 app_assessment_label: "Assessment:",
-                app_assessment_text: "Practical tasks and knowledge tests.",
+                app_assessment_text: "Continuous assessment of on-the-job skills and knowledge-based tests, culminating in an End-Point Assessment (EPA).",
                 app_progression_label: "Progression:",
-                app_progression_text: "Full-time job, higher level apprenticeships (up to degree level).",
-                app_stereotype_label: "Stereotype:",
-                app_stereotype_text: "\"Low pay\" / \"only for manual trades\".",
-                app_reality_label: "Reality:",
-                app_reality_text: "Available in 1500+ job roles, from law to digital marketing. Pay increases with experience.",
-                app_reflection_prompt: "Is my child eager to start working and earning?",
+                app_progression_text: "A full-time role, promotion, or progression to a higher-level apprenticeship (up to degree and master's level).",
+                app_stereotype_label: "The Stereotype:",
+                app_stereotype_text: "\"They're low-paid and just for manual trades.\"",
+                app_reality_label: "The Reality:",
+                app_reality_text: "Available in over 1,500 job roles, from law to digital marketing. Salaries increase with experience and level.",
+                app_reflection_prompt: "Is my child keen to enter the world of work, earn money, and learn in a practical way?",
                 work_title: "Work with Training",
-                work_description: "Entering the workforce with recognised training.",
-                work_key_info_header: "Key Info & Realities:",
-                work_what_label: "What:",
-                work_what_text: "A job that includes formal, accredited training courses.",
+                work_description: "Entering the workforce in a role that includes formal, recognised training qualifications.",
+                work_key_info_header: "Key Info & Reality Check:",
+                work_what_label: "What it is:",
+                work_what_text: "An entry-level job that has a structured training component, leading to an accredited qualification relevant to the industry.",
                 work_entry_label: "Entry:",
-                work_entry_text: "Depends on the job, often focused on attitude and potential.",
+                work_entry_text: "Highly dependent on the employer and role. Often, attitude, reliability, and potential are valued over formal qualifications.",
                 work_assessment_label: "Assessment:",
-                work_assessment_text: "On-the-job performance and course completion.",
+                work_assessment_text: "Based on performance in the job role and successful completion of the associated training courses and assessments.",
                 work_progression_label: "Progression:",
-                work_progression_text: "Career advancement, further professional qualifications.",
-                work_stereotype_label: "Stereotype:",
-                work_stereotype_text: "\"Dead-end job\" / \"no qualifications\".",
-                work_reality_label: "Reality:",
-                work_reality_text: "Can be a fast track to a career, gaining experience and qualifications simultaneously.",
-                work_reflection_prompt: "Does my child have a clear career path in mind?",
+                work_progression_text: "Can lead to career advancement within the company, further professional qualifications, or serve as a stepping stone to other roles.",
+                work_stereotype_label: "The Stereotype:",
+                work_stereotype_text: "\"It's just a dead-end job with no real prospects.\"",
+                work_reality_label: "The Reality:",
+                work_reality_text: "Can be an excellent first step on the career ladder, allowing young people to gain vital experience and industry-recognised qualifications.",
+                work_reflection_prompt: "Does my child have a clear career path in mind and want to start immediately?",
                 reflection_title: "Time to Reflect & Plan",
                 reflection_subtitle: "Use these questions to have a meaningful conversation with your child.",
                 q1_title: "1. What are my child's strengths and passions?",
@@ -643,18 +643,18 @@
                 q2_title: "2. How does my child learn best?",
                 q2_op1_label: "In a classroom, through theory",
                 q2_op2_label: "By doing and practical application",
-                q2_op3_label: "In a work environment",
+                q2_op3_label: "In a real-world work environment",
                 q2_op4_label: "A mix of theory and practice",
                 q3_title: "3. What are their long-term aspirations?",
                 q3_notes_label: "(It's okay if they don't know yet! Just explore ideas.)",
                 next_steps_title: "Our Next Steps Checklist",
                 step1_text: "Visit college/sixth form open days.",
-                step2_text: "Talk to a careers advisor at school.",
+                step2_text: "Speak to a careers advisor at school.",
                 step3_text: "Research specific courses/apprenticeships online.",
-                step4_text: "Look for local apprenticeship vacancies.",
+                step4_text: "Search for local apprenticeship vacancies.",
                 step5_text: "Encourage work experience or volunteering.",
-                other_pathways_title: "Other Pathways",
-                other_pathways_text: "Some students choose routes that are not shown in the main grid but can be equally valuable. For example, supported internships and supported apprenticeships offer structured help for young people with Education, Health and Care Plans (EHCPs) or additional needs. These include job coaching and a strong focus on building independence and employability. Some students join the Armed Forces, where training, qualifications and career development are combined with service. Entry-level work or sector-based training programmes may also help young people build skills and move into apprenticeships or further study. Speak to your school, college or local careers service to find out what is available and what would best support your child’s goals."
+                other_pathways_title: "Other Pathways & Support",
+                other_pathways_text: "Some students choose pathways not shown on the main grid that can be just as valuable. For example, supported internships and supported apprenticeships offer structured help for young people with Education, Health and Care Plans (EHCPs) or additional needs. They involve on-the-job training and a strong focus on building independence and employability. Some students join the Armed Forces, where training, qualifications, and career development are combined with service. Entry-level work or sector-specific training programmes can also help young people build skills and progress to an apprenticeship or further education. Talk to your school, college, or local careers service to find out what's available and what would best support your child's goals."
             },
             ar: {
                 doc_title: "دعم خطوات طفلك التالية: خيارات ما بعد المرحلة الثانوية بعد السنة 11",
