--- a/index.html
+++ b/index.html
@@ -540,70 +540,85 @@
                  <p id="work_reflection_prompt" class="text-sm text-gray-500 italic mt-2"></p>
             </div>
         </div>
-    </div>
-
-    <!-- Side 2 of the Infographic -->
-    <div class="infographic-side">
-
-        <!-- Other Pathways & Support Section -->
-        <div id="other_pathways_card" class="w-full max-w-5xl mb-8 p-8 rounded-2xl bg-blue-50 border border-blue-200">
+        <!-- Other Pathways Section -->
+        <div id="other_pathways_card" class="w-full max-w-5xl mt-8 p-8 rounded-2xl bg-blue-50 border border-blue-200">
             <div class="text-center">
                 <span class="icon text-5xl mb-4" role="img" aria-label="Magnifying Glass Icon">🔍</span>
                 <h3 class="text-3xl font-extrabold text-blue-800 mb-3" id="other_pathways_title">Other Pathways & Support</h3>
-                <p class="text-lg text-gray-700" id="other_pathways_text">Some students choose routes that are not shown in the main grid but can be equally valuable. For example, supported internships and supported apprenticeships offer structured help for young people with Education, Health and Care Plans (EHCPs) or additional needs. These include job coaching and a strong focus on building independence and employability. Some students join the Armed Forces, where training, qualifications and career development are combined with service. Entry-level work or sector-based training programmes may also help young people build skills and move into apprenticeships or further study. Speak to your school, college or local careers service to find out what is available and what would best support your child’s goals.</p>
+                <p class="text-lg text-gray-700" id="other_pathways_text">Some students choose pathways not shown on the main grid that can be just as valuable. Some students join the <strong>Armed Forces</strong>, where training, qualifications, and career development are combined with service. Entry-level work or sector-specific training programmes can also help young people build skills and progress to an apprenticeship or further education. For those who need additional support, pathways like <strong>supported internships</strong> and <strong>supported apprenticeships</strong> offer structured help for young people with Education, Health and Care Plans (EHCPs) or additional needs. These involve on-the-job training with a strong focus on building independence and employability. Talk to your school, college, or local careers service to find out what's available and what would best support your child's goals.</p>
             </div>
         </div>
+    </div>
+
+    <div class="infographic-side">
 
         <!-- Self-Reflection and Action Planning Section -->
         <div class="w-full max-w-5xl reflection-section bg-gray-800 text-white p-8 rounded-2xl">
-            
             <div class="text-center mb-10">
-                <h3 class="text-4xl font-extrabold text-white mb-3" id="reflection_title">Time to Reflect & Plan</h3>
-                <p class="text-lg text-gray-300" id="reflection_subtitle">Use these questions to have a meaningful conversation with your child.</p>
+                <h3 class="text-4xl font-extrabold text-white mb-3" id="reflect_header"></h3>
             </div>
 
-            <!-- Reflection Question 1 -->
+            <!-- Learning Style -->
             <div class="reflection-question">
-                <h4 class="text-xl font-bold text-white mb-4" id="q1_title">1. What are my child's strengths and passions?</h4>
+                <h4 class="text-xl font-bold text-white mb-2" id="learning_style_question"></h4>
+                <p class="text-gray-300 mb-4" id="learning_style_prompt"></p>
                 <div class="reflection-options">
-                    <div class="reflection-option"><input type="checkbox" id="q1_op1"><label for="q1_op1" id="q1_op1_label">Academic & Analytical</label></div>
-                    <div class="reflection-option"><input type="checkbox" id="q1_op2"><label for="q1_op2" id="q1_op2_label">Creative & Hands-on</label></div>
-                    <div class="reflection-option"><input type="checkbox" id="q1_op3"><label for="q1_op3" id="q1_op3_label">Practical & Problem-solving</label></div>
-                    <div class="reflection-option"><input type="checkbox" id="q1_op4"><label for="q1_op4" id="q1_op4_label">Social & Communicative</label></div>
-                </div>
-                <p class="text-sm text-gray-500 italic mt-3" id="q1_notes_label">Notes on their favourite subjects or hobbies:</p>
-                <div class="fillable-line"></div>
-            </div>
-
-            <!-- Reflection Question 2 -->
-            <div class="reflection-question">
-                <h4 class="text-xl font-bold text-white mb-4" id="q2_title">2. How does my child learn best?</h4>
-                <div class="reflection-options">
-                    <div class="reflection-option"><input type="checkbox" id="q2_op1"><label for="q2_op1" id="q2_op1_label">In a classroom, through theory</label></div>
-                    <div class="reflection-option"><input type="checkbox" id="q2_op2"><label for="q2_op2" id="q2_op2_label">By doing and practical application</label></div>
-                    <div class="reflection-option"><input type="checkbox" id="q2_op3"><label for="q2_op3" id="q2_op3_label">In a work environment</label></div>
-                    <div class="reflection-option"><input type="checkbox" id="q2_op4"><label for="q2_op4" id="q2_op4_label">A mix of theory and practice</label></div>
+                    <div class="reflection-option"><input type="checkbox" id="chk_doing"><label for="chk_doing" id="label_learning_doing_parent"></label></div>
+                    <div class="reflection-option"><input type="checkbox" id="chk_writing"><label for="chk_writing" id="label_learning_writing_parent"></label></div>
+                    <div class="reflection-option"><input type="checkbox" id="chk_talking"><label for="chk_talking" id="label_learning_talking_parent"></label></div>
+                    <div class="reflection-option"><input type="checkbox" id="chk_watching"><label for="chk_watching" id="label_learning_watching_parent"></label></div>
+                    <div class="reflection-option"><input type="checkbox" id="chk_building"><label for="chk_building" id="label_learning_building_parent"></label></div>
                 </div>
             </div>
 
-            <!-- Reflection Question 3 -->
+            <!-- Aspirations -->
             <div class="reflection-question">
-                <h4 class="text-xl font-bold text-white mb-4" id="q3_title">3. What are their long-term aspirations?</h4>
-                <p class="text-sm text-gray-500 italic" id="q3_notes_label">(It's okay if they don't know yet! Just explore ideas.)</p>
-                <div class="fillable-line"></div>
-                <div class="fillable-line"></div>
+                <h4 class="text-xl font-bold text-white mb-2" id="aspirations_question"></h4>
+                <p class="text-gray-300 mb-4" id="aspirations_prompt"></p>
+                <div class="reflection-options">
+                    <div class="reflection-option"><input type="checkbox" id="chk_uni"><label for="chk_uni" id="label_goal_university_parent"></label></div>
+                    <div class="reflection-option"><input type="checkbox" id="chk_earn"><label for="chk_earn" id="label_goal_earn_money_parent"></label></div>
+                    <div class="reflection-option"><input type="checkbox" id="chk_exp"><label for="chk_exp" id="label_goal_real_experience_parent"></label></div>
+                    <div class="reflection-option"><input type="checkbox" id="chk_explore"><label for="chk_explore" id="label_goal_try_different_parent"></label></div>
+                </div>
             </div>
 
-            <!-- Next Steps Checklist -->
-            <div class="mt-10 bg-gray-700 p-6 rounded-lg">
-                <h4 class="text-2xl font-bold text-center text-white mb-6" id="next_steps_title">Our Next Steps Checklist</h4>
-                <ul class="space-y-3 max-w-md mx-auto">
-                    <li class="flex items-center"><input type="checkbox" class="mr-3 h-5 w-5"><span id="step1_text">Visit college/sixth form open days.</span></li>
-                    <li class="flex items-center"><input type="checkbox" class="mr-3 h-5 w-5"><span id="step2_text">Talk to a careers advisor at school.</span></li>
-                    <li class="flex items-center"><input type="checkbox" class="mr-3 h-5 w-5"><span id="step3_text">Research specific courses/apprenticeships online.</span></li>
-                    <li class="flex items-center"><input type="checkbox" class="mr-3 h-5 w-5"><span id="step4_text">Look for local apprenticeship vacancies.</span></li>
-                    <li class="flex items-center"><input type="checkbox" class="mr-3 h-5 w-5"><span id="step5_text">Encourage work experience or volunteering.</span></li>
-                </ul>
+            <div class="text-center my-10">
+                <h3 class="text-4xl font-extrabold text-white mb-3" id="compare_decide_header"></h3>
+            </div>
+
+            <!-- Good Fit -->
+            <div class="reflection-question">
+                <h4 class="text-xl font-bold text-white mb-2" id="good_fit_question"></h4>
+                <p class="text-gray-300 mb-4" id="good_fit_prompt"></p>
+            </div>
+
+            <!-- Learn More -->
+            <div class="reflection-question">
+                <h4 class="text-xl font-bold text-white mb-2" id="learn_more_question"></h4>
+                <p class="text-gray-300 mb-4" id="talk_through_learn_more_prompt"></p>
+            </div>
+
+            <div class="text-center my-10">
+                <h3 class="text-4xl font-extrabold text-white mb-3" id="next_steps_header"></h3>
+            </div>
+
+            <!-- Next Step -->
+            <div class="reflection-question">
+                <h4 class="text-xl font-bold text-white mb-2" id="parent_next_step_prompt"></h4>
+                <p class="text-gray-300 mb-4" id="next_step_prompt_text"></p>
+            </div>
+
+            <!-- Parent Questions -->
+            <div class="reflection-question">
+                <h4 class="text-xl font-bold text-white mb-2" id="parent_questions_prompt"></h4>
+                <p class="text-gray-300 mb-4" id="parent_questions_prompt_text"></p>
+            </div>
+
+            <!-- Who to Talk To -->
+            <div class="reflection-question">
+                <h4 class="text-xl font-bold text-white mb-2" id="parent_who_to_talk_prompt"></h4>
+                <p class="text-gray-300 mb-4" id="who_to_talk_prompt_text"></p>
             </div>
         </div>
     </div>
@@ -664,7 +679,7 @@
                 tl_reality_text: "Equivalent to 3 A-Levels, they provide valuable, real-world experience and are co-designed with leading employers.",
                 tl_reflection_prompt: "Would my child benefit from mixing academic study with significant, real-world work experience?",
                 ib_title: "IB Diploma",
-                ib_description: "A broad and challenging international curriculum covering six different subject areas.",
+                ib_description: "A broad, international curriculum with six subjects.",
                 ib_key_info_header: "Key Info & Reality Check:",
                 ib_what_label: "What it is:",
                 ib_what_text: "A comprehensive 2-year programme studying 6 subjects (from languages to sciences), plus a core programme focusing on critical thinking and research.",
@@ -711,29 +726,36 @@
                 work_reality_label: "The Reality:",
                 work_reality_text: "Can be an excellent first step on the career ladder, allowing young people to gain vital experience and industry-recognised qualifications.",
                 work_reflection_prompt: "Does my child have a clear career path in mind and want to start immediately?",
-                reflection_title: "Time to Reflect & Plan",
-                reflection_subtitle: "Use these questions to have a meaningful conversation with your child.",
-                q1_title: "1. What are my child's strengths and passions?",
-                q1_op1_label: "Academic & Analytical",
-                q1_op2_label: "Creative & Hands-on",
-                q1_op3_label: "Practical & Problem-solving",
-                q1_op4_label: "Social & Communicative",
-                q1_notes_label: "Notes on their favourite subjects or hobbies:",
-                q2_title: "2. How does my child learn best?",
-                q2_op1_label: "In a classroom, through theory",
-                q2_op2_label: "By doing and practical application",
-                q2_op3_label: "In a real-world work environment",
-                q2_op4_label: "A mix of theory and practice",
-                q3_title: "3. What are their long-term aspirations?",
-                q3_notes_label: "(It's okay if they don't know yet! Just explore ideas.)",
-                next_steps_title: "Our Next Steps Checklist",
-                step1_text: "Visit college/sixth form open days.",
-                step2_text: "Speak to a careers advisor at school.",
-                step3_text: "Research specific courses/apprenticeships online.",
-                step4_text: "Search for local apprenticeship vacancies.",
-                step5_text: "Encourage work experience or volunteering.",
+                reflect_header: "Let’s Reflect: Supporting Your Child’s Next Step",
+                learning_style_question: "What's your child's learning style?",
+                learning_style_prompt: "💡 <strong>Thinking Prompt:</strong> How does your child naturally learn best – by doing things, reading, discussing ideas, or watching others? What school subjects or hobbies light up their curiosity?",
+                label_learning_doing_parent: "Practical (doing)",
+                label_learning_writing_parent: "Academic (reading/writing)",
+                label_learning_talking_parent: "Collaborative (talking)",
+                label_learning_watching_parent: "Observational (watching)",
+                label_learning_building_parent: "Hands-on (building)",
+                aspirations_question: "What are your child's aspirations?",
+                aspirations_prompt: "💡 <strong>Thinking Prompt:</strong> Beyond qualifications, what truly motivates your child? What kind of work would make them feel fulfilled, or what sort of impact do they hope to have?",
+                label_goal_university_parent: "Go to university",
+                label_goal_earn_money_parent: "Earn money & learn",
+                label_goal_real_experience_parent: "Gain real-world experience",
+                label_goal_try_different_parent: "Explore different paths",
+
+                compare_decide_header: "Talk It Through Together",
+                good_fit_question: "Which one(s) feel like a good fit for your child right now?",
+                good_fit_prompt: "💡 <strong>Thinking Prompt:</strong> Which of these pathways genuinely excites your child? Which ones align with their strengths, even if they seem a little challenging?",
+                learn_more_question: "What questions could help us feel more confident in our choices?",
+                talk_through_learn_more_prompt: "💡 <strong>Thinking Prompt:</strong> What specific details about a pathway would make you and your child feel more secure in a decision? For example, about progression, daily life, or support systems?",
+
+                next_steps_header: "What You Can Do Next",
+                parent_next_step_prompt: "What is one small thing I could do this week to support my child’s journey?",
+                next_step_prompt_text: "💡 <strong>Thinking Prompt:</strong> To get started, what’s one practical, easy step you could take? Maybe help them research a specific college, or arrange a conversation with someone in a career they’re curious about?",
+                parent_questions_prompt: "What questions could help us feel more confident in our choices?",
+                parent_questions_prompt_text: "💡 <strong>Thinking Prompt:</strong> As a parent, what financial, logistical, or long-term questions do you have about these options? How can you find those answers?",
+                parent_who_to_talk_prompt: "Is there someone we can turn to for advice (e.g. careers adviser, tutor, friend)?",
+                who_to_talk_prompt_text: "💡 <strong>Thinking Prompt:</strong> Who in your child's life (or your own network) could offer valuable insights or encouragement? Think about careers advisors, teachers, family friends, or mentors.",
                 other_pathways_title: "Other Pathways & Support",
-                other_pathways_text: "Some students choose pathways not shown on the main grid that can be just as valuable. Some students join the <strong>Armed Forces</strong>, where training, qualifications, and career development are combined with service. Entry-level work or sector-specific training programmes can also help young people build skills and progress to an apprenticeship or further education. For those who need additional support, pathways like <strong>supported internships</strong> and <strong>supported apprenticeships</strong> offer structured help for young people with Education, Health and Care Plans (EHCPs) or additional needs. These involve on-the-job training with a strong focus on building independence and employability. Talk to your school, college, or local careers service to find out what's available and what would best support your child's goals."
+                other_pathways_text: "Some students choose pathways not shown on the main grid that can be equally valuable. For example, supported internships and supported apprenticeships offer structured help for young people with Education, Health and Care Plans (EHCPs) or additional needs. These include job coaching and a strong focus on building independence and employability. Some students join the Armed Forces, where training, qualifications and career development are combined with service. Entry-level work or sector-based training programmes may also help young people build skills and move into apprenticeships or further study. Speak to your school, college or local careers service to find out what is available and what would best support your child’s goals."
             },
             ar: {
                 doc_title: "دعم خطوات طفلك التالية: خيارات ما بعد المرحلة الثانوية بعد السنة 11",
