--- a/index.html
+++ b/index.html
@@ -177,7 +177,19 @@
             border-top: 4px solid #cbd5e1;
         }
         .reflection-question {
+            margin-bottom: 2.5rem;
+        }
+
+        .fillable-line {
+            border-bottom: 1px solid #6b7280; /* gray-500 */
+            height: 3rem; /* Taller for more space */
+            margin-top: 0.75rem;
             margin-bottom: 1.5rem;
+            transition: border-color 0.3s;
+        }
+
+        .fillable-line:hover {
+            border-bottom-color: #d1d5db; /* gray-300 */
         }
         .reflection-options {
             display: flex;
@@ -569,6 +581,7 @@
                     <div class="reflection-option"><input type="checkbox" id="chk_watching"><label for="chk_watching" id="label_learning_watching_parent"></label></div>
                     <div class="reflection-option"><input type="checkbox" id="chk_building"><label for="chk_building" id="label_learning_building_parent"></label></div>
                 </div>
+                <div class="fillable-line"></div>
             </div>
 
             <!-- Aspirations -->
@@ -581,6 +594,7 @@
                     <div class="reflection-option"><input type="checkbox" id="chk_exp"><label for="chk_exp" id="label_goal_real_experience_parent"></label></div>
                     <div class="reflection-option"><input type="checkbox" id="chk_explore"><label for="chk_explore" id="label_goal_try_different_parent"></label></div>
                 </div>
+                <div class="fillable-line"></div>
             </div>
 
             <div class="text-center my-10">
@@ -591,12 +605,14 @@
             <div class="reflection-question">
                 <h4 class="text-xl font-bold text-white mb-2" id="good_fit_question"></h4>
                 <p class="text-gray-300 mb-4" id="good_fit_prompt"></p>
+                <div class="fillable-line"></div>
             </div>
 
             <!-- Learn More -->
             <div class="reflection-question">
                 <h4 class="text-xl font-bold text-white mb-2" id="learn_more_question"></h4>
                 <p class="text-gray-300 mb-4" id="talk_through_learn_more_prompt"></p>
+                <div class="fillable-line"></div>
             </div>
 
             <div class="text-center my-10">
@@ -607,18 +623,21 @@
             <div class="reflection-question">
                 <h4 class="text-xl font-bold text-white mb-2" id="parent_next_step_prompt"></h4>
                 <p class="text-gray-300 mb-4" id="next_step_prompt_text"></p>
+                <div class="fillable-line"></div>
             </div>
 
             <!-- Parent Questions -->
             <div class="reflection-question">
                 <h4 class="text-xl font-bold text-white mb-2" id="parent_questions_prompt"></h4>
                 <p class="text-gray-300 mb-4" id="parent_questions_prompt_text"></p>
+                <div class="fillable-line"></div>
             </div>
 
             <!-- Who to Talk To -->
             <div class="reflection-question">
                 <h4 class="text-xl font-bold text-white mb-2" id="parent_who_to_talk_prompt"></h4>
                 <p class="text-gray-300 mb-4" id="who_to_talk_prompt_text"></p>
+                <div class="fillable-line"></div>
             </div>
         </div>
     </div>
