--- a/index.html
+++ b/index.html
@@ -267,16 +267,59 @@
             color: #2d3748; /* Darker text for better contrast */
         }
 
+        .print-button {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+            padding: 0.75rem 1.5rem;
+            background-color: #2563eb; /* A nice blue */
+            color: white;
+            border: none;
+            border-radius: 9999px; /* pill shape */
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 4px 14px rgba(0, 0, 0, 0.15);
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .print-button:hover {
+            background-color: #1d4ed8; /* Darker blue on hover */
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .print-button .icon {
+            font-size: 1.25rem;
+        }
+
         /* Print-specific adjustments to ensure optimal layout on A4 */
         @media print {
+            @page {
+                size: A4;
+                margin: 20mm;
+            }
+
             body {
                 padding: 0;
                 margin: 0;
                 min-height: auto;
                 justify-content: flex-start;
-                background-color: #fff; /* White background for printing */
-                color: #000; /* Black text for printing */
+                background-color: #fff !important; /* White background for printing */
+                color: #000 !important; /* Black text for printing */
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
             }
+
+            /* Hide elements not for printing */
+            .language-selector, .print-button, .option-card:hover {
+                display: none !important;
+            }
+
+            /* Page layout */
             .infographic-side {
                 width: 100%;
                 min-height: auto;
@@ -284,15 +327,31 @@
                 box-shadow: none;
                 border-radius: 0;
                 border: none;
-                padding: 1.2rem;
+                padding: 0; /* Remove padding to use @page margins */
+                page-break-after: always; /* Each side on a new page */
             }
-            .option-card, .reflection-section, #other_pathways_card {
+
+            .infographic-side:last-child {
+                page-break-after: auto; /* No page break after the last side */
+            }
+
+            /* Prevent elements from breaking across pages */
+            .card,
+            .reflection-section,
+            #other_pathways_card {
+                page-break-inside: avoid;
+            }
+
+            /* Card styling for print */
+            .card, .reflection-section, #other_pathways_card {
                 background-color: transparent !important; /* Remove all card backgrounds */
                 border: 1px solid #ccc !important; /* Add simple border for definition */
                 box-shadow: none !important;
             }
             .bg-white.bg-opacity-70 { background-color: transparent !important; }
-            h1, h2, h3, h4, p, li, strong, span {
+
+            /* Typography for print */
+            h1, h2, h3, h4, p, li, strong, span, label {
                 color: #000 !important; /* Ensure all text is black */
                 font-size: 10pt !important; /* Standardize font size */
                 line-height: 1.2 !important;
@@ -302,8 +361,21 @@
             h3 { font-size: 16pt !important; }
             h4 { font-size: 12pt !important; }
             .text-6xl { font-size: 2.5rem !important; }
-            .language-selector, .option-card:hover { display: none; } /* Hide selector, disable hover effects */
-            .grid { grid-template-columns: repeat(2, 1fr); gap: 1rem; } /* 2 columns for print */
+
+            /* Grid layout for print */
+            .grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 1rem;
+            }
+
+            /* Form elements */
+            input, textarea {
+                border: 1px solid #000;
+            }
+            .fillable-line { 
+                border-bottom: 1px solid #999; 
+                background-color: transparent !important;
+            }
         }
 
         /* Mobile-friendly adjustments */
@@ -336,7 +408,11 @@
         }
     </style>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen">
+<body>
+    <button id="print_button" onclick="window.print()" class="print-button">
+        <span class="icon" role="img" aria-label="Print Icon">🖨️</span> Print Guide
+    </button>
+    <div class="flex flex-col items-center justify-center min-h-screen">
 
     <div class="language-selector">
         <select id="languageSelect" onchange="changeLanguage()">
